@@ -14,8 +14,6 @@ ipc.c \
 ipc.h \
 module.c \
 modulep.h \
-protocol.c \
-protocol.h \
 report.c \
 reportp.h \
 scan.c \
