@@ -1,5 +1,5 @@
 #include "client.h"
-#include "lib/protocol.h"
+#include "lib/ipc.h"
 #include "libuhuru-config.h"
 
 #include <stdio.h>
@@ -9,17 +9,17 @@
 
 struct client {
   int sock;
-  struct protocol_handler *handler;
+  struct ipc_manager *manager;
   struct uhuru *uhuru;
 };
 
-static void cb_ping(struct protocol_handler *h, void *data)
+static void ping_handler(struct ipc_manager *m, void *data)
 {
   struct client *cl = (struct client *)data;
 
   fprintf(stderr, "callback cb_ping\n");
 
-  protocol_handler_send_msg(cl->handler, "PONG", NULL);
+  ipc_manager_send_msg(cl->manager, IPC_MSG_ID_PONG, IPC_NONE);
 }
 
 static void scan_callback(struct uhuru_report *report, void *callback_data)
@@ -29,21 +29,22 @@ static void scan_callback(struct uhuru_report *report, void *callback_data)
 
   sprintf(status, "%d", report->status);
   sprintf(action, "%d", report->action);
-  protocol_handler_send_msg(cl->handler, "SCAN_FILE", 
-			    "Path", report->path, 
-			    "Status", status,
-			    "Module-Name", report->mod_name,
-			    "X-Status", report->mod_report,
-			    "Action", action,
-			    NULL);
+  ipc_manager_send_msg(cl->manager, IPC_MSG_ID_SCAN_FILE, 
+		       IPC_STRING, report->path, 
+		       IPC_STRING, status,
+		       IPC_STRING, report->mod_name,
+		       IPC_STRING, report->mod_report,
+		       IPC_STRING, action,
+		       IPC_NONE);
 }
 
-static void cb_scan(struct protocol_handler *h, void *data)
+static void scan_handler(struct ipc_manager *m, void *data)
 {
   struct client *cl = (struct client *)data;
-  char *path = protocol_handler_get_header(h, "Path");
+  char *path;
   struct uhuru_scan *scan;
 
+  ipc_manager_get_arg_at(m, 0, IPC_STRING, &path);
   fprintf(stderr, "callback cb_scan path: %s\n", path);
 
   scan = uhuru_scan_new(cl->uhuru, path, UHURU_SCAN_RECURSE);
@@ -57,7 +58,7 @@ static void cb_scan(struct protocol_handler *h, void *data)
 
   uhuru_scan_free(scan);
 
-  protocol_handler_send_msg(cl->handler, "SCAN_END", NULL);
+  ipc_manager_send_msg(cl->manager, IPC_MSG_ID_SCAN_END, IPC_NONE);
 
   /* FIXME: should not be there: the UI must close the connexion when processing SCAN_END message, then the server will close */
   close(cl->sock);
@@ -65,7 +66,7 @@ static void cb_scan(struct protocol_handler *h, void *data)
   fprintf(stderr, "callback cb_scan end\n");
 }
 
-static void cb_stat(struct protocol_handler *h, void *data)
+static void cb_stat(struct ipc_manager *m, void *data)
 {
   struct client *cl = (struct client *)data;
 
@@ -77,17 +78,16 @@ struct client *client_new(int client_sock, struct uhuru *uhuru)
   struct client *cl = (struct client *)malloc(sizeof(struct client));
 
   cl->sock = client_sock;
-  cl->handler = protocol_handler_new(cl->sock, cl->sock);
+  cl->manager = ipc_manager_new(cl->sock, cl->sock);
   cl->uhuru = uhuru;
 
-  protocol_handler_add_callback(cl->handler, "PING", cb_ping, cl);
-  protocol_handler_add_callback(cl->handler, "SCAN", cb_scan, cl);
-  protocol_handler_add_callback(cl->handler, "STATS", cb_stat, cl);
+  ipc_manager_add_handler(cl->manager, IPC_MSG_ID_PING, ping_handler, cl);
+  ipc_manager_add_handler(cl->manager, IPC_MSG_ID_SCAN, scan_handler, cl);
 
   return cl;
 }
 
 int client_process(struct client *cl)
 {
-  return protocol_handler_receive(cl->handler);
+  return ipc_manager_receive(cl->manager);
 }
