@@ -1,5 +1,7 @@
 2015-08-31  François  <francois@dechelle.net>
 
+	* finished replacing old IPC protocol with new binary implementation; not tested yet with scan daemon
+
 	* finished new implementation of ipc with handlers; unit tests work
 
 2015-08-29  François  <francois@dechelle.net>
